Add gui test (#234)
* Add command box tests

* Add ExerciseListView tests

* Refactor out id fields and add node handles

* Add help window tests

* Add in resource list panel gui tests

* Add documentation to gui asserts

* Add more test to resource list panels

* Add info display panel tests

* minor updates to UG and DG

* Update UG pictures

* Update PPP

--- a/docs/Testing.adoc
+++ b/docs/Testing.adoc
@@ -1,4 +1,4 @@
-= AddressBook Level 3 - Testing
+= ExerHealth - Testing
 :site-section: DeveloperGuide
 :toc:
 :toc-title:
@@ -32,8 +32,10 @@ See <<UsingGradle#, UsingGradle.adoc>> for more info on how to run tests using G
 
 == Types of tests
 
-We have three types of tests:
+We have four types of tests:
 
+. _GUI Unit Tests_ targetting reusable GUI components +
+e.g. `seedu.exercise.ui.CommandBoxTest`
 .  _Unit tests_ targeting the lowest level methods/classes. +
 e.g. `seedu.exercise.commons.StringUtilTest`
 .  _Integration tests_ that are checking the integration of multiple code units (those code units are assumed to be working). +
